--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>
-			My Map
+			BWCAW Permit Map
 		</title>
 		<!-- Leaflet -->
 		<link rel="stylesheet" href="lib/leaflet/leaflet.css" />
